force-app/main/default/objects/Opportunity__c/fields/ERP_Status__c.field-meta.xml
<CustomField>
    <fullName>ERP_Status__c</fullName>
    <formula>IF( RecordType.Name = &apos;FR&apos;, 
IF(ISPICKVAL(Stage__c, &apos;Lost&apos;),&apos;Lost&apos;,
IF(ISPICKVAL(Stage__c, &apos;Dead&apos;),&apos;Dead&apos;,
IF(ISPICKVAL(Stage__c, &apos;Engaged&apos;),&apos;Active&apos;,
IF(ISPICKVAL(Stage__c, &apos;Hold&apos;),&apos;Hold&apos;,
&apos;Active&apos;)))),

IF(ISPICKVAL(Stage__c, &apos;Hold&apos;),&apos;Hold&apos;,
IF(ISPICKVAL(Stage__c, &apos;Lost&apos;),&apos;Lost&apos;,
IF(ISPICKVAL(Stage__c, &apos;Dead&apos;),&apos;Dead&apos;,
IF(ISPICKVAL(Stage__c, &apos;Engaged&apos;),&apos;Active&apos;,
&apos;Active&apos;)))))</formula>
    <label>ERP Status</label>
    <type>Text</type>
</CustomField>