force-app/main/default/objects/Opportunity__c/fields/ERP_Submitted_To_Sync__c.field-meta.xml
<CustomField>
    <fullName>ERP_Submitted_To_Sync__c</fullName>
    <description>Initiates the outbound message to Oracle ICS. This is updated when the record is created or modified. Another process can update this field to initiate the outbound message.</description>
    <inlineHelpText>Initiates the outbound message to Oracle ICS. This is updated when the record is created or modified. Another process can update this field to initiate the outbound message.</inlineHelpText>
    <label>ERP Submitted To Sync</label>
    <type>DateTime</type>
</CustomField>