force-app/main/default/objects/Opportunity__c/fields/ERP_Task_Description__c.field-meta.xml
<CustomField>
    <fullName>ERP_Task_Description__c</fullName>
    <label>ERP Task Description</label>
    <length>255</length>
    <type>Text</type>
</CustomField>