force-app/main/default/objects/Opportunity__c/fields/ERP_Task_Name__c.field-meta.xml
<CustomField>
    <fullName>ERP_Task_Name__c</fullName>
    <label>ERP Task Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>