force-app/main/default/objects/Opportunity__c/fields/ERP_Template__c.field-meta.xml
<CustomField>
    <fullName>ERP_Template__c</fullName>
    <label>ERP Template</label>
    <length>60</length>
    <type>Text</type>
</CustomField>