force-app/main/default/objects/Opportunity__c/fields/ERP_Update_New_Task__c.field-meta.xml
<CustomField>
    <fullName>ERP_Update_New_Task__c</fullName>
    <defaultValue>false</defaultValue>
    <label>ERP Update New Task</label>
    <type>Checkbox</type>
</CustomField>