force-app/main/default/objects/Opportunity__c/fields/ERP_Update_Opportunity__c.field-meta.xml
<CustomField>
    <fullName>ERP_Update_Opportunity__c</fullName>
    <defaultValue>false</defaultValue>
    <label>ERP Update Opportunity</label>
    <type>Checkbox</type>
</CustomField>