force-app/main/default/objects/Opportunity__c/fields/ERP_Update_Status__c.field-meta.xml
<CustomField>
    <fullName>ERP_Update_Status__c</fullName>
    <defaultValue>false</defaultValue>
    <label>ERP Update Status</label>
    <type>Checkbox</type>
</CustomField>