force-app/main/default/objects/Opportunity__c/fields/ERP_VAT_Treatment_Entity__c.field-meta.xml
<CustomField>
    <fullName>ERP_VAT_Treatment_Entity__c</fullName>
    <defaultValue>false</defaultValue>
    <description>ERP VAT Treatment Entity - It&apos;s referencing the value from Legal Entity table. If this field is marked as TRUE, Then the opportunity requires VAT Treatment</description>
    <inlineHelpText>ERP VAT Treatment Entity</inlineHelpText>
    <label>ERP VAT Treatment Entity</label>
    <type>Checkbox</type>
</CustomField>