force-app/main/default/objects/Opportunity__c/fields/Estimated_Capital_Raised_MM__c.field-meta.xml
<CustomField>
    <fullName>Estimated_Capital_Raised_MM__c</fullName>
    <label>Estimated Capital Raised (MM)</label>
    <precision>18</precision>
    <scale>1</scale>
    <type>Currency</type>
</CustomField>