force-app/main/default/objects/Opportunity__c/fields/Estimated_Engagement_Date__c.field-meta.xml
<CustomField>
    <fullName>Estimated_Engagement_Date__c</fullName>
    <label>Estimated Engagement Date</label>
    <type>Date</type>
</CustomField>