force-app/main/default/objects/Opportunity__c/fields/Estimated_Fee__c.field-meta.xml
<CustomField>
    <fullName>Estimated_Fee__c</fullName>
    <label>Estimated Fee</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>