force-app/main/default/objects/Opportunity__c/fields/Estimated_Transaction_Size_Equity__c.field-meta.xml
<CustomField>
    <fullName>Estimated_Transaction_Size_Equity__c</fullName>
    <label>Estimated Transaction Size Equity</label>
    <precision>17</precision>
    <scale>1</scale>
    <type>Currency</type>
</CustomField>