force-app/main/default/objects/Opportunity__c/fields/Estimated_Transaction_Size_MM__c.field-meta.xml
<CustomField>
    <fullName>Estimated_Transaction_Size_MM__c</fullName>
    <inlineHelpText>If Public, insert the Market Cap of the company.</inlineHelpText>
    <label>Est. Transaction Size / Market Cap (MM)</label>
    <precision>17</precision>
    <scale>1</scale>
    <type>Currency</type>
</CustomField>