force-app/main/default/objects/Opportunity__c/fields/EU_Initiatives__c.field-meta.xml
<CustomField>
    <fullName>EU_Initiatives__c</fullName>
    <label>EMEA Initiatives</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Africa</fullName>
            </value>
            <value>
                <fullName>Automotive</fullName>
            </value>
            <value>
                <fullName>CEE/CIS</fullName>
            </value>
            <value>
                <fullName>Emerging Asia</fullName>
            </value>
            <value>
                <fullName>FIG</fullName>
            </value>
            <value>
                <fullName>France</fullName>
            </value>
            <value>
                <fullName>Germany</fullName>
            </value>
            <value>
                <fullName>Italy</fullName>
            </value>
            <value>
                <fullName>London General (other W. Europe)</fullName>
            </value>
            <value>
                <fullName>Middle East</fullName>
            </value>
            <value>
                <fullName>Nordics</fullName>
            </value>
            <value>
                <fullName>Spain</fullName>
            </value>
            <value>
                <fullName>Turkey</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>