force-app/main/default/objects/Opportunity__c/fields/Event_Format__c.field-meta.xml
<CustomField>
    <fullName>Event_Format__c</fullName>
    <description>RFC#2547 - created new field as part of CF Expense Request functionality.</description>
    <inlineHelpText>Event Format based on the Event Type</inlineHelpText>
    <label>Event Format</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Event_Type__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>CF Charitable Contribution Match</fullName>
            </value>
            <value>
                <fullName>Group Meals</fullName>
            </value>
            <value>
                <fullName>Holiday Party</fullName>
            </value>
            <value>
                <fullName>N/A</fullName>
            </value>
            <value>
                <fullName>Offsite Meeting</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Teambuilding Activity</fullName>
            </value>
            <value>
                <fullName>Team Drinks</fullName>
            </value>
            <value>
                <fullName>Training</fullName>
            </value>
            <value>
                <fullName>Branding and Leadership (IP)</fullName>
                <isActive>false</isActive>
                <label>Branding and Leadership (IP)</label>
            </value>
            <value>
                <fullName>CF Management Request</fullName>
                <isActive>false</isActive>
                <label>CF Management Request</label>
            </value>
            <value>
                <fullName>Client Entertainment</fullName>
                <isActive>false</isActive>
                <label>Client Entertainment</label>
            </value>
            <value>
                <fullName>Client Gifts</fullName>
                <isActive>false</isActive>
                <label>Client Gifts</label>
            </value>
            <value>
                <fullName>Closing Party</fullName>
                <isActive>false</isActive>
                <label>Closing Party</label>
            </value>
            <value>
                <fullName>Conference/Seminar</fullName>
                <isActive>false</isActive>
                <label>Conference/Seminar</label>
            </value>
            <value>
                <fullName>External Client Meeting</fullName>
                <isActive>false</isActive>
                <label>External Client Meeting</label>
            </value>
            <value>
                <fullName>FY Annual Meeting</fullName>
                <isActive>false</isActive>
                <label>FY Annual Meeting</label>
            </value>
            <value>
                <fullName>Local Marketing</fullName>
                <isActive>false</isActive>
                <label>Local Marketing</label>
            </value>
            <value>
                <fullName>Marketing Membership</fullName>
                <isActive>false</isActive>
                <label>Marketing Membership</label>
            </value>
            <value>
                <fullName>Networking Events</fullName>
                <isActive>false</isActive>
                <label>Networking Events</label>
            </value>
            <value>
                <fullName>Other Client Entertainment</fullName>
                <isActive>false</isActive>
                <label>Other Client Entertainment</label>
            </value>
            <value>
                <fullName>Other Professional Event</fullName>
                <isActive>false</isActive>
                <label>Other Professional Event</label>
            </value>
            <value>
                <fullName>Professional Memberships</fullName>
                <isActive>false</isActive>
                <label>Professional Memberships</label>
            </value>
            <value>
                <fullName>Regional Marketing</fullName>
                <isActive>false</isActive>
                <label>Regional Marketing</label>
            </value>
            <value>
                <fullName>Service Line Request</fullName>
                <isActive>false</isActive>
                <label>Service Line Request</label>
            </value>
            <value>
                <fullName>Sponsorship / Charity Events</fullName>
                <isActive>false</isActive>
                <label>Sponsorship / Charity Events</label>
            </value>
            <value>
                <fullName>Sporting Events</fullName>
                <isActive>false</isActive>
                <label>Sporting Events</label>
            </value>
            <value>
                <fullName>Staff Entertainment</fullName>
                <isActive>false</isActive>
                <label>Staff Entertainment</label>
            </value>
            <value>
                <fullName>Talent Development</fullName>
                <isActive>false</isActive>
                <label>Talent Development</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>