force-app/main/default/objects/Opportunity__c/fields/Event_Location__c.field-meta.xml
<CustomField>
    <fullName>Event_Location__c</fullName>
    <description>RFC#2547 - created new field as part of CF Expense Request functionality.</description>
    <inlineHelpText>Location of event</inlineHelpText>
    <label>Event Location</label>
    <length>255</length>
    <type>Text</type>
</CustomField>