force-app/main/default/objects/Opportunity__c/fields/Event_Type__c.field-meta.xml
<CustomField>
    <fullName>Event_Type__c</fullName>
    <description>RFC#2547 - created new field as part of CF Expense Request functionality.</description>
    <inlineHelpText>The type of event being created</inlineHelpText>
    <label>Event Type</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Classification__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Administrative</fullName>
            </value>
            <value>
                <fullName>Branding and Advertising</fullName>
            </value>
            <value>
                <fullName>Client Entertainment</fullName>
            </value>
            <value>
                <fullName>Conference/Summit/Seminar</fullName>
            </value>
            <value>
                <fullName>HL Hosted Client Event</fullName>
            </value>
            <value>
                <fullName>HL Hosted Client Event (during 3rd - party events)</fullName>
            </value>
            <value>
                <fullName>Membership Dues</fullName>
            </value>
            <value>
                <fullName>Sponsorship</fullName>
            </value>
            <value>
                <fullName>Staff Entertainment</fullName>
            </value>
            <value>
                <fullName>Third Party Conference/Seminar Attendance</fullName>
            </value>
            <value>
                <fullName>Charitable Donation Match</fullName>
                <isActive>false</isActive>
                <label>Charitable Donation Match</label>
            </value>
            <value>
                <fullName>Conference/Seminar</fullName>
                <isActive>false</isActive>
                <label>Conference/Seminar</label>
            </value>
            <value>
                <fullName>Marketing Membership</fullName>
                <isActive>false</isActive>
                <label>Marketing Membership</label>
            </value>
            <value>
                <fullName>Marketing Trip</fullName>
                <isActive>false</isActive>
                <label>Marketing Trip</label>
            </value>
            <value>
                <fullName>N/A</fullName>
                <isActive>false</isActive>
                <label>N/A</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>