force-app/main/default/objects/Opportunity__c/fields/Exchange_Rate__c.field-meta.xml
<CustomField>
    <fullName>Exchange_Rate__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Exchange Rate</label>
    <referenceTo>Exchange_Rate__c</referenceTo>
    <relationshipLabel>Opportunities</relationshipLabel>
    <relationshipName>Opportunities</relationshipName>
    <type>Lookup</type>
</CustomField>