force-app/main/default/objects/Opportunity__c/fields/Expense_Available_Until__c.field-meta.xml
<CustomField>
    <fullName>Expense_Available_Until__c</fullName>
    <label>Available Until</label>
    <type>Date</type>
</CustomField>