force-app/main/default/objects/Opportunity__c/fields/Fairness_Opinion_Component__c.field-meta.xml
<CustomField>
    <fullName>Fairness_Opinion_Component__c</fullName>
    <inlineHelpText>Does the Engagement Letter stipulate that we may be asked to provide a fairness opinion?</inlineHelpText>
    <label>Fairness Opinion Component</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>Yes</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>