force-app/main/default/objects/Opportunity__c/fields/Fee__c.field-meta.xml
<CustomField>
    <fullName>Fee__c</fullName>
    <description>for FVA so we can aggregate into TOTAL FEE field</description>
    <inlineHelpText>Please include total estimated fees for the next 12 months. Must be greater than or equal to $10,000.</inlineHelpText>
    <label>Fee</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>