force-app/main/default/objects/Opportunity__c/fields/FEIS_Approved__c.field-meta.xml
<CustomField>
    <fullName>FEIS_Approved__c</fullName>
    <defaultValue>false</defaultValue>
    <label>FEIS Approved</label>
    <type>Checkbox</type>
</CustomField>