force-app/main/default/objects/Opportunity__c/fields/Form_Type1__c.field-meta.xml
<CustomField>
    <fullName>Form_Type1__c</fullName>
    <label>Form Type1</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>FEIS</fullName>
            </value>
            <value>
                <fullName>NBC</fullName>
            </value>
            <value>
                <fullName>CNBC</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>