force-app/main/default/objects/Opportunity__c/fields/Full_Opportunity_ID__c.field-meta.xml
<CustomField>
    <fullName>Full_Opportunity_ID__c</fullName>
    <formula>CASESAFEID( Id )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Full Opportunity ID</label>
    <type>Text</type>
</CustomField>