force-app/main/default/objects/Opportunity__c/fields/Fund_Launch_Timing__c.field-meta.xml
<CustomField>
    <fullName>Fund_Launch_Timing__c</fullName>
    <label>Fund Launch Timing</label>
    <length>255</length>
    <type>Text</type>
</CustomField>