force-app/main/default/objects/Opportunity__c/fields/Fund_Size_Target__c.field-meta.xml
<CustomField>
    <fullName>Fund_Size_Target__c</fullName>
    <label>Fund Size Target ($)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>