force-app/main/default/objects/Opportunity__c/fields/Has_Adverse_Clients__c.field-meta.xml
<CustomField>
    <fullName>Has_Adverse_Clients__c</fullName>
    <label>Has Adverse Clients</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>Yes</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>