force-app/main/default/objects/Opportunity__c/fields/Has_Attachment__c.field-meta.xml
<CustomField>
    <fullName>Has_Attachment__c</fullName>
    <defaultValue>false</defaultValue>
    <description>RETIRED - 3/11/2015 AYU</description>
    <label>Has Attachment</label>
    <type>Checkbox</type>
</CustomField>