force-app/main/default/objects/Opportunity__c/fields/HL_Entity__c.field-meta.xml
<CustomField>
    <fullName>HL_Entity__c</fullName>
    <label>HL Entity</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Cap Inc.</fullName>
            </value>
            <value>
                <fullName>China Ltd.</fullName>
            </value>
            <value>
                <fullName>Financial Advisory</fullName>
            </value>
            <value>
                <fullName>HL (Corporate Finance) S.A.</fullName>
            </value>
            <value>
                <fullName>HL Australia</fullName>
            </value>
            <value>
                <fullName>HL Consulting, Inc.</fullName>
            </value>
            <value>
                <fullName>HL Deutschland GMBH</fullName>
            </value>
            <value>
                <fullName>HL Dubai</fullName>
            </value>
            <value>
                <fullName>HL EMEA LLP</fullName>
            </value>
            <value>
                <fullName>HL Espana S.A.</fullName>
            </value>
            <value>
                <fullName>HL Finance</fullName>
            </value>
            <value>
                <fullName>HL K.K.</fullName>
            </value>
            <value>
                <fullName>HL Leonardo (Italy Hldco) Ltd.</fullName>
            </value>
            <value>
                <fullName>HL Leonardo &amp; Co SpA</fullName>
            </value>
            <value>
                <fullName>HL Netherlands B.V.</fullName>
            </value>
            <value>
                <fullName>HL Singapore</fullName>
            </value>
            <value>
                <fullName>Quayle Munro Limited</fullName>
            </value>
            <value>
                <fullName>Real Estate</fullName>
            </value>
            <value>
                <fullName>HL Tech IP, LLC</fullName>
            </value>
            <value>
                <fullName>Milestone Advisors, LLC</fullName>
            </value>
            <value>
                <fullName>Red Pine Advisors</fullName>
            </value>
            <value>
                <fullName>ArchPoint Partners, LLC</fullName>
            </value>
            <value>
                <fullName>HL (Financial Advisory) Ltd.</fullName>
            </value>
            <value>
                <fullName>HL (Europe) Ltd - Frankfurt</fullName>
            </value>
            <value>
                <fullName>HL (Europe) Ltd.</fullName>
            </value>
            <value>
                <fullName>McQueen Holdings Ltd.</fullName>
            </value>
            <value>
                <fullName>HL UK Holdings, LP (U.S.)</fullName>
            </value>
            <value>
                <fullName>HL Capital (Asia) Ltd.</fullName>
            </value>
            <value>
                <fullName>HL EMEA, LLP - Croatia</fullName>
            </value>
            <value>
                <fullName>HL (Australia) Pty Ltd</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>