force-app/main/default/objects/Opportunity__c/fields/HL_Percent_of_Transaction__c.field-meta.xml
<CustomField>
    <fullName>HL_Percent_of_Transaction__c</fullName>
    <defaultValue>1</defaultValue>
    <label>HL % of Transaction</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>