force-app/main/default/objects/Opportunity__c/fields/HLHZ_acting_as_an_intermediary__c.field-meta.xml
<CustomField>
    <fullName>HLHZ_acting_as_an_intermediary__c</fullName>
    <label>HLHZ acting as an intermediary</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Underlying_Transaction_excempt__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>YES</fullName>
            </value>
            <value>
                <fullName>NO</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>