force-app/main/default/objects/Opportunity__c/fields/Hold__c.field-meta.xml
<CustomField>
    <fullName>Hold__c</fullName>
    <formula>ISPICKVAL(Stage__c, &apos;On Hold&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Hold</label>
    <type>Checkbox</type>
</CustomField>