force-app/main/default/objects/Opportunity__c/fields/Industry_Group_Abbreviation_All__c.field-meta.xml
<CustomField>
    <fullName>Industry_Group_Abbreviation_All__c</fullName>
    <description>Used to show a picklist of each all industry group abbreviations to match to the Industry Group REPORTING field</description>
    <label>Industry Group Abbreviation All</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>BUS</fullName>
            </value>
            <value>
                <fullName>CFR</fullName>
            </value>
            <value>
                <fullName>FIG</fullName>
            </value>
            <value>
                <fullName>HC</fullName>
            </value>
            <value>
                <fullName>IG</fullName>
            </value>
            <value>
                <fullName>O&amp;G</fullName>
            </value>
            <value>
                <fullName>POW</fullName>
            </value>
            <value>
                <fullName>RE</fullName>
            </value>
            <value>
                <fullName>SOV</fullName>
            </value>
            <value>
                <fullName>TECH</fullName>
            </value>
            <value>
                <fullName>TRANS</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>