force-app/main/default/objects/Opportunity__c/fields/Internal_Team_Aggregate__c.field-meta.xml
<CustomField>
    <fullName>Internal_Team_Aggregate__c</fullName>
    <description>Used internally to aggregate the Ids of the Opportunity Internal Team</description>
    <label>Internal Team Aggregate</label>
    <type>TextArea</type>
</CustomField>