force-app/main/default/objects/Opportunity__c/fields/Internal_Team_Prompt__c.field-meta.xml
<CustomField>
    <fullName>Internal_Team_Prompt__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Determine whether the internal team record should be prompted</description>
    <label>Internal Team Prompt</label>
    <type>Checkbox</type>
</CustomField>